# notification_feed

./: .gitignore  CMakeLists.txt  README.md  build.sh  start_client.sh  start_front_end.sh  start_server.sh
.github/workflows/: c-cpp-macos.yml  c-cpp.yml
config/: servers_config.cfg
doc/ui_files/: exit_ascii.txt  intro_ascii.txt
include/client/: client.h  ui.h
include/front_end/: front_end.h
include/server/: election.h  server.h  user.h
include/ui/: ui.h
include/user/: user.h
include/util/: common.h  definitions.h  notification.h  ui.h
src/app/: app_client.cpp  app_front_end.cpp  app_server.cpp
src/client/: CMakeLists.txt  client.cpp  ui.cpp
src/client/ui_files/: exit_ascii.txt  intro_ascii.txt
src/front_end/: CMakeLists.txt  front_end.cpp
src/server/: CMakeLists.txt  election.cpp  server.cpp  user.cpp
src/ui/: ui.cpp
src/ui/ui_files/: ufrgs_logo_ascii.txt
src/util/: common.cpp  notification.cpp  ui.cpp
